--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -158,3 +158,4 @@
 @import '../../templates/components/feed/feed';
 @import '../../templates/components/room-features-item/room-features-item';
 @import '../../templates/components/expandable-checkbox-list/expandable-checkbox-list';
+@import '../../templates/components/rate-button/rate-button';
