--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -27,6 +27,7 @@ block includes
   include ../../templates/components/room-features-item/room-features-item
   include ../../templates/components/expandable-checkbox-list/expandable-checkbox-list
   include ../../templates/components/rate-button/rate-button
+  include ../../templates/components/range-slider/range-slider
 
 block content
   section.colors-type
@@ -301,4 +302,13 @@ block content
             starsAmount: "5",
             radioName: "rating",
             rating: "5"
+          })
+        .form-elements__range-slider 
+          +range-slider({
+            subtitle: "range slider",
+            name: "price",
+            min: "0",
+            max: "15000",
+            start: "5000",
+            end: "10000"
           })
