Modified pagination component, deleted pagination.js plugin

--- a/src/templates/components/pagination/pagination.pug
+++ b/src/templates/components/pagination/pagination.pug
@@ -2,4 +2,6 @@ mixin pagination(options)
   if !options
     - options = {}
 
-  .pagination
+  - const {pages} = options;
+
+  .pagination-container(data-pages = pages)
