--- a/src/templates/components/bullet-list/_bullet-list.scss
+++ b/src/templates/components/bullet-list/_bullet-list.scss
@@ -1,10 +1,12 @@
 .bullet-list {
-  @include flex-column($gap: 1rem);
-  list-style: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-
+  &__wrapper {
+    @include flex-column($gap: 1rem);
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+  }
+  
   &__item {
     position: relative;
     padding-left: 2rem;
