--- a/src/templates/components/range-slider/_range-slider.scss
+++ b/src/templates/components/range-slider/_range-slider.scss
@@ -1,10 +1,9 @@
 .range-slider {
-  width: 100%;
   max-width: 266px;
 
   &__header {
     @include set-flex($mainAxis: space-between, $crossAxis: center);
-    margin-bottom: 1.4rem;
+    margin-bottom: 2.35rem;
   }
 
   &__subtitle {
@@ -17,13 +16,8 @@
     text-transform: uppercase;
   }
 
-  &__body {
-    display: inline-block;
-    width: 100%;
-  }
-
   &__input {
-    display: none !important;
+    display: none;
   }
 
   .irs {
