--- a/src/templates/components/subscription-field/subscription-field.pug
+++ b/src/templates/components/subscription-field/subscription-field.pug
@@ -3,10 +3,11 @@ mixin subscription-field(options)
     - options = {}
 
   form.subscription-field(action = options.action)
-    if options.label
-      label.subscription-field__wrapper
-        span.subscription-field__label= options.label
+    .subscription-field__inner 
+      if options.label
+        label.subscription-field__wrapper
+          span.subscription-field__label= options.label
+          input.subscription-field__input(type = "email", name = options.name, placeholder = options.placeholder, required = options.required)
+      else 
         input.subscription-field__input(type = "email", name = options.name, placeholder = options.placeholder, required = options.required)
-    else 
-      input.subscription-field__input(type = "email", name = options.name, placeholder = options.placeholder, required = options.required)
-    button.subscription-field__button(type = "submit")
+      button.subscription-field__button(type = "submit")
