--- a/src/templates/components/text-field/_text-field.scss
+++ b/src/templates/components/text-field/_text-field.scss
@@ -1,6 +1,5 @@
 .text-field {
-  @include flex-column($gap: 0.5rem);
-  width: 100%;
+  @include flex-column();
   max-width: 320px;
   &__input {
     display: inline-block;
@@ -29,6 +28,7 @@
   &__label {
     position: relative;
     width: 100%;
+    margin-bottom: 0.5rem;
     @include label-cta-text();
     text-transform: uppercase;
     cursor: pointer;
