--- a/src/templates/components/toggle/_toggle.scss
+++ b/src/templates/components/toggle/_toggle.scss
@@ -5,6 +5,7 @@
   &__input {
     position: relative;
     margin: 0;
+    flex-shrink: 0;
     appearance: none;
     @include set-size(4rem, 2rem);
     @include set-border($borderColor: $darkShade25, $borderRadius: 1rem);
