Refactored components' styles

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -121,13 +121,13 @@ block content
             +checkbox({
               isRich: true,
               label: "широкий коридор",
-              description: "ширина коридоров в номере не менее 91 см.",
+              description: "ширина коридоров в номере <br> не менее 91 см.",
               name: "add-ins"
             })
             +checkbox({
               isRich: true,
               label: "помощник для инвалидов",
-              description: "на 1 этаже вас встретит специалист  и проводит до номера.",
+              description: "на 1 этаже вас встретит специалист <br> и проводит до номера.",
               name: "add-ins"
             })
         .form-elements__radio-buttons
