--- a/src/templates/components/checkbox/checkbox.pug
+++ b/src/templates/components/checkbox/checkbox.pug
@@ -13,7 +13,7 @@ mixin checkbox(options)
       input.checkbox__input(type = "checkbox", name = options.name, checked = options.checked)
       if options.isRich
         span.checkbox__text
-          span.checkbox__label.checkbox__label_type_rich= options.label
-          span.checkbox__description= options.description
+          span.checkbox__label.checkbox__label_type_rich!= options.label
+          span.checkbox__description!= options.description
       else 
-        span.checkbox__label= options.label
+        span.checkbox__label!= options.label
