--- a/src/templates/components/type-item/type-item.pug
+++ b/src/templates/components/type-item/type-item.pug
@@ -8,4 +8,4 @@ mixin type-item(options)
 
   .type-item(class = options.tag ? `type-item_style_${options.tag}` : "")
     .type-item__tag= options.tag || "tag"
-    .type-item__description(class = options.uppercase ? "type-item__description_case_uppercase" : "") !{options.descr}
+    .type-item__description(class = options.uppercase ? "type-item__description_case_uppercase" : "")!= options.descr
