Created scripts for dropdown component

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -354,3 +354,30 @@ block content
               {name: "спальни", count: "0"}
             ]
           })
+          +dropdown({
+            isBig: true,
+            isRequired: true,
+            label: "dropdown",
+            state: "default",
+            name: "guests",
+            inputPlaceholder: "Сколько гостей",
+            menuItems: [
+              {name: "взрослые", count: "0"},
+              {name: "дети", count: "0"},
+              {name: "младенцы", count: "0"}
+            ]
+          })
+          +dropdown({
+            isBig: true,
+            isExpanded: true,
+            isRequired: true,
+            label: "dropdown",
+            state: "default",
+            name: "guests",
+            inputPlaceholder: "Сколько гостей",
+            menuItems: [
+              {name: "взрослые", count: "0"},
+              {name: "дети", count: "0"},
+              {name: "младенцы", count: "0"}
+            ]
+          })
