--- a/src/templates/components/dropdown/_dropdown.scss
+++ b/src/templates/components/dropdown/_dropdown.scss
@@ -8,6 +8,9 @@
   
   &_expanded {
     border-color: $darkShade50;
+    .dropdown__menu {
+      display: block;
+    }
   }
 
   &__field {
@@ -39,14 +42,14 @@
       content: '\e5cf';
       position: absolute;
       top: 0;
-      bottom: 0;
       right: 0;
-      width: 4.4rem;
-      text-align: center;
-      @include set-font(2.4rem, 400, 4.4rem, $darkShade75, "Material Icons", 'icons');
+      @include set-size(4.4rem, 100%);
+      @include flex-center();
+      @include set-font(2.4rem, 400, 2.4rem, $darkShade75, "Material Icons", 'icons');
     }
 
     &-element {
+      position: relative;
       display: inline-block;
       width: 100%;
       outline: none;
@@ -54,6 +57,7 @@
       background: none;
       padding: 1.3rem 4.4rem 1.3rem 1.5rem;
       @include set-font(1.4rem, 400, 1.8rem, $darkShade75);
+      z-index: -1;
       
       &::placeholder {
         @include set-font(1.4rem 400, 1.8rem, $darkShade75);
@@ -68,16 +72,15 @@
   }
 
   &__menu {
+    display: none;
     @include set-border($borderColor: $darkShade25, $borderRadius: 0 0 4px 4px);
     border-top: none;
-    padding-left: 1.5rem;
-    padding-right: 0.7rem;
+    padding: 0.7rem 0.7rem 0.8rem 1.5rem;
+    overflow: hidden;
   }
 
   &__items {
     @include flex-column($gap: 0.7rem);
-    padding-top: 0.7rem;
-    padding-bottom: 0.8rem;
   }
 
   &__item {
@@ -116,9 +119,23 @@
   }
 
   &__buttons {
-    margin-top: 1.1rem;
-    margin-bottom: 1.3rem;
+    margin-top: 1.9rem;
+    margin-bottom: 0.5rem;
     @include set-flex($mainAxis: space-between, $crossAxis: center)
+  }
+
+  &__button {
+    &-clear,
+    &-apply {
+      line-height: 1;
+      cursor: pointer;
+    }
+
+    &-clear {
+      &_hidden {
+        visibility: hidden;
+      }
+    }
   }
 }
 
